fixed mobile flyout on iphone by replacing marign with postiion

--- a/addons/shared_addons/themes/brd/sass/_nav.scss
+++ b/addons/shared_addons/themes/brd/sass/_nav.scss
@@ -63,10 +63,11 @@ nav{
 	&.fixed{
 		position:fixed;
 		top:0;
-		//right:0;
+		right:0;
 		margin-right:0;
 		.mobileOpen &{
-			margin-right: 45%;
+			right: 45% !important;
+			background:red;
 		}
 	}
 }
